[package]
name = "sportsEnsemblePredictor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.3", features = ["kv-rocksdb"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
chrono = "0.4.38"
select = "0.6.0"
